--- a/JS DOM/one.html
+++ b/JS DOM/one.html
@@ -5,16 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM one</title>
+
+    <style>
+        body {
+            padding: 0%;
+            margin: 0%;
+            background-color: #212121;
+            color: #fff;
+        }
+
+        h1 span {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
     <div class="bg-black">
-        <h1 class="heading">DOM LEARNING</h1>
+        <h1 id="title" class="heading">DOM LEARNING <span>Test Text</span> </h1>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut harum tempora officia, doloremque in dicta
             libero voluptatem ipsam eius tenetur debitis quaerat optio sapiente eligendi maxime laudantium accusamus.
             Illum, atque!
         </p>
     </div>
+
+    <ul>
+        <li class="listItem">One</li>
+        <li class="listItem">Two</li>
+        <li class="listItem">Three</li>
+        <li class="listItem">Four</li>
+    </ul>
 </body>
 
 </html>
