Updated solution code of Color Change Project

--- a/JS DOM/Projects/Basic_Projects/Color_Changer.html
+++ b/JS DOM/Projects/Basic_Projects/Color_Changer.html
@@ -113,7 +113,8 @@
     </h2>
 
     <!--JS script tag-->
-    <script src="Color_Changer.js"></script>
+    <!-- <script src="Color_Changer.js"></script> -->
+    <script src="Color_Changer_JS.js"></script>
 </body>
 
 </html>
