--- a/JS DOM/Projects/Basic_Projects/BMI.html
+++ b/JS DOM/Projects/Basic_Projects/BMI.html
@@ -74,6 +74,10 @@
             margin: 20px 0px;
             color: white;
         }
+
+        #result{
+            margin: 20px 0px;
+        }
     </style>
 </head>
 
@@ -90,8 +94,14 @@
 
             <button>Calculate</button>
             <p>Please enter your height in [cm] and weight in [kg]</p>
+            <ul>
+                <li>Under Weight = Less than 18.6</li>
+                <li>Normal Range = 18.6 and 24.9</li>
+                <li>Overweigth = Greator than 24.9</li>
+            </ul>
 
             <div id="result"></div>
+            <div id="feedback"></div>
 
         </form>
 
