Revised solution code of HTML Number guess game

--- a/JS DOM/Projects/Basic_Projects/Number_Guess.html
+++ b/JS DOM/Projects/Basic_Projects/Number_Guess.html
@@ -107,7 +107,7 @@
 
     </div>
 
-    <script src="Number_Guess.js"></script>
+    <script src="number_guess_script.js"></script>
 </body>
 
 </html>
