--- a/JS DOM/Async JavaScript/Project 3.html
+++ b/JS DOM/Async JavaScript/Project 3.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project 3</title>
 
+    <style>
+        body{
+            padding: 0%;
+            margin: 0%;
+            box-sizing: border-box;
+        }
+
+        .container{
+            width: auto;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            border: 1px solid;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        h2{
+            text-align: center;
+        }
+
+        .color{
+            border: 1px solid;
+        }
+    </style>
+</head>
+<body>
+    
+    <h2>Press any and see the magic</h2>
+    <div class="container">
+
+    </div>
+
+    <script src="Project 3.js"></script>
+</body>
+</html>
