--- a/JS DOM/Async JavaScript/XMLHTTP-Project2.html
+++ b/JS DOM/Async JavaScript/XMLHTTP-Project2.html
@@ -1,1 +1,32 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GitHub user info</title>
+    <link rel="stylesheet" href="">
+</head>
+<body>
+    <div class="search-container">
+        <input type="text">
+        <button>Search</button>
+    </div>
+
+    <div class="resultContainer">
+        <div class="leftSideBar">
+            <div class="imageContainer"></div>
+        </div>
+
+        <div class="rightSideBar">
+            <p>Use this on your laptop for better experience!</p>
+            <div class="name"></div>
+            <div class="bio"></div>
+            <div class="followers"></div>
+            <div class="following"></div>
+        </div>
+    </div>
+
+    <script src="XLMHTTP-project2.js"></script>
+</body>
+</html>
