--- a/JS DOM/Async JavaScript/XMLHTTP-Project2.html
+++ b/JS DOM/Async JavaScript/XMLHTTP-Project2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub user info</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="XMLHTTP-style.css">
 </head>
 <body>
     <div class="search-container">
