--- a/JS DOM/Async JavaScript/fetch-Project.html
+++ b/JS DOM/Async JavaScript/fetch-Project.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fetch API Project</title>
+    <link rel="stylesheet" href="fetch-Project,css">  
+  </head>
+<body>
+    
+    <div class="searchBar">
+        <input type="text">
+        <button>Get info</button>
+    </div>
 
+    <div class="resultBar"></div>
+
+    <script src="fetchProject.js"></script>
+</body>
+</html>
